--- a/trunk/application/views/system/backoffice/html/backoffice-dashboard/index.phtml
+++ b/trunk/application/views/system/backoffice/html/backoffice-dashboard/index.phtml
@@ -1,10 +1,3 @@
-<fieldset><legend>Form</legend>
- <?php echo $this->form?>
-</fieldset>
-<h3>
-  <?php
-echo __('Statistics')?>
-</h3>
 <h3>
   <?php
 echo __('System information')?>
@@ -101,4 +94,46 @@ echo __('Iconv')?></th>
 		<td><?php
 echo ($this->iconv_func) ? __('available') : __('unvailable')?></td>
 	</tr>
+</table>
+
+<h3>
+  <?php
+echo __('Statistics')?>
+</h3>
+
+<table class="grid">
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Website Address</th>
+			<th>Email Address</th>
+			<th>Action</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr class="odd">
+			<td class="left">John Adams</td>
+			<td>http://themeforest.net?ref=ne-design</td>
+			<td>sample@sample.com</td>
+			<td><a href="#">Add</a> | <a href="#">Edit</a> | <a href="#">Remove</a></td>
+		</tr>
+		<tr>
+			<td class="left">John Adams</td>
+			<td>http://themeforest.net?ref=ne-design</td>
+			<td>sample@sample.com</td>
+			<td><a href="#">Add</a> | <a href="#">Edit</a> | <a href="#">Remove</a></td>
+		</tr>
+		<tr class="odd">
+			<td class="left">John Adams</td>
+			<td>http://themeforest.net?ref=ne-design</td>
+			<td>sample@sample.com</td>
+			<td><a href="#">Add</a> | <a href="#">Edit</a> | <a href="#">Remove</a></td>
+		</tr>
+		<tr>
+			<td class="left">John Adams</td>
+			<td>http://themeforest.net?ref=ne-design</td>
+			<td>sample@sample.com</td>
+			<td><a href="#">Add</a> | <a href="#">Edit</a> | <a href="#">Remove</a></td>
+		</tr>
+	</tbody>
 </table>
