--- a/trunk/static/system/css/reset.css
+++ b/trunk/static/system/css/reset.css
@@ -16,8 +16,8 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input
 }
 
 table {
+	border: 0px;
 	border-collapse: collapse;
-	border-spacing: 0;
 }
 
 fieldset,img {
