--- a/application/modules/main/views/backoffice/html/index/index.phtml
+++ b/application/modules/main/views/backoffice/html/index/index.phtml
@@ -1,139 +1,1 @@
-<h3>
-  <?php
-echo __('System information')?>
-</h3>
-<table>
-	<tr>
-		<th width="40%"><?php
-echo __('Operating system')?></th>
-		<td><?php
-echo $this->os_version?></td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('PHP Version')?></th>
-		<td><?php
-echo $this->php_version?> </td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('PHP Server API')?></th>
-		<td><?php
-echo $this->php_sapi?> </td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Zend Framework version')?></th>
-		<td><?php
-echo $this->zf_version?> </td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Database adapter')?></th>
-		<td><?php
-echo $this->sql_adapter?> </td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Database server version')?></th>
-		<td><?php
-echo $this->sql_version?> </td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Image adapter component')?></th>
-		<td><?php
-echo $this->image_adapter?></td>
-	</tr>
-	<tr>
-		<th><?php
-echo $this->image_adapter?> Version</th>
-		<td><?php
-echo $this->image_adapter_version?></td>
-	
-	
-	<tr>
-		<th><?php
-echo __('Apache rewrite module')?></th>
-		<td><?php
-echo ($this->apache_rewrite) ? __('available') : __('unvailable')?></td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Free disk space')?></th>
-		<td><?php
-echo $this->free_disk_space?></td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Safe mode')?></th>
-		<td><?php
-echo ($this->safe_mode) ? __('on') : __('off')?></td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Memory limit')?></th>
-		<td><?php
-echo ($this->memory_limit) ? $this->memory_limit : __('unvailable')?></td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Disable functions')?></th>
-		<td><?php
-echo ($this->disable_functions) ? $this->disable_functions : __('unvailable')?></td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Zlib extention')?></th>
-		<td><?php
-echo ($this->zlib_ext) ? __('available') : __('unvailable')?></td>
-	</tr>
-	<tr>
-		<th><?php
-echo __('Iconv')?></th>
-		<td><?php
-echo ($this->iconv_func) ? __('available') : __('unvailable')?></td>
-	</tr>
-</table>
-
-<h3>
-  <?php
-echo __('Statistics')?>
-</h3>
-
-<table class="grid">
-	<thead>
-		<tr>
-			<th>Name</th>
-			<th>Website Address</th>
-			<th>Email Address</th>
-			<th>Action</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr class="odd">
-			<td class="left">John Adams</td>
-			<td>http://themeforest.net?ref=ne-design</td>
-			<td>sample@sample.com</td>
-			<td><a href="#">Add</a> | <a href="#">Edit</a> | <a href="#">Remove</a></td>
-		</tr>
-		<tr>
-			<td class="left">John Adams</td>
-			<td>http://themeforest.net?ref=ne-design</td>
-			<td>sample@sample.com</td>
-			<td><a href="#">Add</a> | <a href="#">Edit</a> | <a href="#">Remove</a></td>
-		</tr>
-		<tr class="odd">
-			<td class="left">John Adams</td>
-			<td>http://themeforest.net?ref=ne-design</td>
-			<td>sample@sample.com</td>
-			<td><a href="#">Add</a> | <a href="#">Edit</a> | <a href="#">Remove</a></td>
-		</tr>
-		<tr>
-			<td class="left">John Adams</td>
-			<td>http://themeforest.net?ref=ne-design</td>
-			<td>sample@sample.com</td>
-			<td><a href="#">Add</a> | <a href="#">Edit</a> | <a href="#">Remove</a></td>
-		</tr>
-	</tbody>
-</table>
+<h3>This is test view script for current main module if BACKOFFICE_CONTROLLER is TRUE</h3>
