--- a/trunk/application/modules/system/views/backoffice/html/backoffice-dashboard/index.phtml
+++ b/trunk/application/modules/system/views/backoffice/html/backoffice-dashboard/index.phtml
@@ -1,12 +1,4 @@
-<fieldset>
-<legend>Form</legend>
-<?php echo $this->form ?>
-
-</fieldset>
-<h3>
-  <?php
-echo __('System information')?>
-</h3>
+<h3><?php echo __('System information')?></h3>
 <table>
 	<tr>
 		<th width="40%"><?php
