--- a/application/modules/blog/views/backoffice/sidebar/index.phtml
+++ b/application/modules/blog/views/backoffice/sidebar/index.phtml
@@ -1,1 +1,2 @@
-This is sidebar for current main module. Testing paths to load view scripts.
+This is sidebar for current main module. Testing paths to load view
+scripts.
