--- a/application/modules/main/views/backoffice/html/index/index.phtml
+++ b/application/modules/main/views/backoffice/html/index/index.phtml
@@ -1,1 +1,2 @@
-<h3>This is test view script for current main module if BACKOFFICE_CONTROLLER is TRUE</h3>
+<h3>This is test view script for current main module if
+BACKOFFICE_CONTROLLER is TRUE</h3>
