--- a/application/views/cultsoft.org.ua/html/main/error/error.phtml
+++ b/application/views/cultsoft.org.ua/html/main/error/error.phtml
@@ -9,24 +9,23 @@
 <h2><?php
 echo $this->message?></h2>
 
-  <?php
+<?php
 if ('development' == APPLICATION_ENV)
-    :
-    ?>
+:
+?>
 
-  <h3>Exception information:</h3>
+<h3>Exception information:</h3>
 <p><b>Message:</b> <?php
-    echo $this->exception->getMessage()?>
-  </p>
+echo $this->exception->getMessage()?></p>
 
 <h3>Stack trace:</h3>
 <pre><?php
-    echo $this->exception->getTraceAsString()?>
+echo $this->exception->getTraceAsString()?>
   </pre>
 
 <h3>Request Parameters:</h3>
 <pre><?php
-    var_dump($this->request->getParams())?>
+var_dump($this->request->getParams())?>
   </pre>
 
 
