--- a/application/views/cultsoft.org.ua/partial/left_part_content.phtml
+++ b/application/views/cultsoft.org.ua/partial/left_part_content.phtml
@@ -1,6 +1,4 @@
 <div class="grid_11 para sepline">
-<div class="text">
-    <?php
-echo $this->content?>
- </div>
+<div class="text"><?php
+echo $this->content?></div>
 </div>
