--- a/application/views/simple/layouts/default.phtml
+++ b/application/views/simple/layouts/default.phtml
@@ -60,10 +60,8 @@ echo App::baseUri()?>" />
 </ul>
 </div>
 </div>
-<div id="main_content">
-    <?php
-echo $this->layout()->content?>
-  </div>
+<div id="main_content"><?php
+echo $this->layout()->content?></div>
 <!-- end of main_content -->
 <div id="footer">
 <div id="copyright">
