--- a/application/modules/system/views/backoffice/layouts/default.phtml
+++ b/application/modules/system/views/backoffice/layouts/default.phtml
@@ -32,10 +32,10 @@ echo $this->tplIMG?>logo.png"
 <div id="global_nav">
 <ul>
 	<li><?php
-echo __('Welcome')?> <a
+	echo __('Welcome')?> <a
 		href="<?php
-echo $this->url(array('profile_id' => $this->member->getId()), 'view_profile')?>"><?php
-echo $this->member->getField('first_name') . ' ' . $this->member->getField('last_name')?></a></li>
+		echo $this->url(array('profile_id' => $this->member->getId()), 'view_profile')?>"><?php
+		echo $this->member->getField('first_name') . ' ' . $this->member->getField('last_name')?></a></li>
 	<li><a href="#">Settings</a></li>
 	<li class="last"><a href="#">Log Out</a></li>
 </ul>
@@ -346,14 +346,11 @@ echo $this->pageDescription?></span></div>
 
 <p class=''><?php
 echo $this->navigation()->breadcrumbs($this->topMenu)?></p>
-            <?php
+<?php
 echo $this->messages();
 
-?>
-            <?php
-echo $this->layout()->content?>
-
-            </div>
+?> <?php
+echo $this->layout()->content?></div>
 <div style="clear: both;"></div>
 </div>
 </div>
@@ -372,9 +369,7 @@ echo $this->tplIMG?>search-button.gif"
 	alt="Go" type="image"></form>
 </div>
 
-<?php echo $this->render($this->sidebarBlocks)?>
-
-</div>
+<?php echo $this->render($this->sidebarBlocks)?></div>
 </div>
 <div id="footer">
 <p class="left">&copy; Copyright <?php
