--- a/application/modules/system/views/scripts/error.phtml
+++ b/application/modules/system/views/scripts/error.phtml
@@ -18,50 +18,45 @@ echo $this->headStyle();
 <?php
 if (APPLICATION_ENV == 'development') {
 
-    ?>
-<div class="kohana_error"> <?php
-    echo $this->layout()->type?> [ <strong><?php
-    echo $this->layout()->file?></strong>, line <strong><?php
-    echo $this->layout()->line?></strong> ]
+	?>
+<div class="kohana_error"><?php
+echo $this->layout()->type?> [ <strong><?php
+echo $this->layout()->file?></strong>, line <strong><?php
+echo $this->layout()->line?></strong> ]
 <div class="message">
 <p><?php
-    echo $this->layout()->description?></p>
+echo $this->layout()->description?></p>
 <pre><?php
-    echo $this->layout()->message?></pre></div>
+echo $this->layout()->message?></pre></div>
 </div>
-<div class="kohana_trace">
-  <?php
-    if (! empty($this->layout()->source)) {
+<div class="kohana_trace"><?php
+if (! empty($this->layout()->source)) {
 
-        ?>
-  <div class="source"><pre id="kohana_error_source"><?php
-        echo $this->layout()->source?></pre></div>
-	<?php
-    }
+	?>
+<div class="source"><pre id="kohana_error_source"><?php
+echo $this->layout()->source?></pre></div>
+<?php
+}
 
-    ?>
-  <?php
-    if (! empty($this->layout()->trace)) {
+?> <?php
+if (! empty($this->layout()->trace)) {
 
-        ?>
-  <pre class="trace"><?php
-        echo implode("\n", $this->layout()->trace)?></pre>
-	<?php
-    }
+	?> <pre class="trace"><?php
+	echo implode("\n", $this->layout()->trace)?></pre> <?php
+}
 
-    ?>
-</div>
+?></div>
 
 <?php
 } else {
 
-    ?>
+	?>
 <div id="framework_error" style="width: 24em; margin: 50px auto;">
 <h1>Unable to Complete Request</h1>
 <p style="text-align: center">You can go to the <a href="/">home page</a>
 or <a href="">try again</a>.</p>
 </div>
-<?php
+	<?php
 }
 
 ?>
