--- a/application/views/cultsoft.org.ua/layouts/homepage.phtml
+++ b/application/views/cultsoft.org.ua/layouts/homepage.phtml
@@ -34,10 +34,9 @@ echo App::baseUri()?>" />
 echo $this->tplIMG?>logo.png"
 	class="logo" alt="Memix" /></a></div>
 
-<div class="grid_11 menu"><!-- Top menu Start -->
-<?php
+<div class="grid_11 menu"><!-- Top menu Start --> <?php
 echo $this->partial('top_menu.phtml', array('navigation' => $this->navigation()->menu()))?>
-      <!-- Top menu End --></div>
+<!-- Top menu End --></div>
 </div>
 </div>
 <div class="clear">&nbsp;</div>
@@ -53,8 +52,7 @@ echo $this->tplIMG?>new_icon.png" alt="" class="leftalign" />
 </div>
 <div class="grid_4 fbox"><img
 	src="<?php
-echo $this->tplIMG?>menu_icon.png" alt=""
-	class="leftalign" />
+echo $this->tplIMG?>menu_icon.png" alt="" class="leftalign" />
 <h6><a href="#">Print & Graphics</a></h6>
 <p><small>aoreetet congueeu osuere sit ametelit Sondimentum.</small></p>
 </div>
@@ -67,26 +65,24 @@ echo $this->tplIMG?>download_icon.png" alt=""
 </div>
 <div class="grid_4 fbox"><img
 	src="<?php
-echo $this->tplIMG?>copy_icon.png" alt=""
-	class="leftalign" />
+echo $this->tplIMG?>copy_icon.png" alt="" class="leftalign" />
 <h6><a href="#">SEO Marketing</a></h6>
 <p><small>Nulla Fusce etlibero. Mauri smattis Duis vulpu acilisi cods.</small></p>
 </div>
 <!-- 4 Blocks --></div>
 <div class="clear">&nbsp;</div>
 <div class="content cbg">
-<div class="container_16 linebg"><!--Left part of text follows here-->
-    <?php
+<div class="container_16 linebg"><!--Left part of text follows here--> <?php
 echo $this->partial('homepage_left_part_content.phtml', array('content' => $this->layout()->content))?>
-     <!--End of the Left part text  --> <!--Right part of text follows here-->
-	  <?php
+<!--End of the Left part text  --> <!--Right part of text follows here-->
+<?php
 echo $this->partial('homepage_right_part.phtml', array('view' => $this))?>
-      <!--End of the Right part text  --></div>
+<!--End of the Right part text  --></div>
 </div>
 </div>
 <div class="clear">&nbsp;</div>
 <!-- Footer Block Start -->
- <?php
+<?php
 echo $this->partial('page_footer.phtml')?>
 <!-- Footer Block End -->
 </body>
