--- a/trunk/static/system/backoffice/css/elements.css
+++ b/trunk/static/system/backoffice/css/elements.css
@@ -20,7 +20,7 @@ input {
 	color: #000000;
 }
 input[type=text], input[type=password], input[type=file] {
-	width:70%;
+	width:90%;
 }
 input[type=text], input[type=password], input[type=file], div.input_field input, textarea, select {
 	background-color: #fff;
@@ -200,10 +200,11 @@ input.max {
 /* style the sub level list items */
 #navTopMenu ul ul li {
 	display: block;
-	width: auto;
+	width: 120px;
 	height: auto;
 	position: relative;
 	line-height: 1em;
+
 }
 /* style the links for the top level */
 #navTopMenu a, #navTopMenu a:visited {
@@ -226,13 +227,16 @@ input.max {
 	font-weight: bold;
 }
 #navTopMenu li.active ul li.active a {
-	background-color: #EEE;
+	background-color: #333;
 	font-weight: bold;
+    color: #FFF;
 }
 /* style the sub level links */
-#navTopMenu ul ul a, #navTopMenu ul ul a:visited {
+#navTopMenu ul ul a,
+#navTopMenu ul ul a:visited {
 	display: block;
 	color: #333;
+    background-color: #D4D0C8;
 	width: 100%;
 	height: 100%;
 	line-height: 1em;
@@ -462,7 +466,7 @@ table.grid tbody tr:hover td,
 table.grid tbody tr.odd:hover td {
 	background-color: #FFFFF2;
 }
-table.grid tbody tr.odd td {
+table.grid tbody tr.even td {
 	background-color: #F5F5F5;
 }
 #footer .navigation
