--- a/trunk/static/system/backoffice/css/elements.css
+++ b/trunk/static/system/backoffice/css/elements.css
@@ -482,3 +482,17 @@ table.grid tbody tr.even td {
 {
  color: #fff;
 }
+
+/* Zend Form Styling */
+dl.zend_form dt label.required { font-weight: 600; }
+dl.zend_form dd ul.errors {
+		list-style: none;
+		padding: 0;
+		margin: 0;
+}
+dl.zend_form dd ul.errors li {
+		float: left;
+		margin: 0 0.15em;
+		font-size: 12px;
+		color: red;
+}
