--- a/application/modules/blog/views/backoffice/html/admin/manage-blogs.phtml
+++ b/application/modules/blog/views/backoffice/html/admin/manage-blogs.phtml
@@ -29,9 +29,9 @@ echo __('Create new blog')?></a></p>
 			<td><?php
         echo $types[$blog->type]?></td>
 			<td><a
-				href="<?=$this->url(array('action' => 'edit-blog' , 'id' => $blog->id))?>"><?=__('Edit')?></a>
+				href="<?=$this->url(array('action' => 'edit-blog' , 'id' => $blog->id, 'page' => null))?>"><?=__('Edit')?></a>
 			<a
-				href="<?=$this->url(array('action' => 'delete-blog' , 'id' => $blog->id))?>"><?=__('Delete')?></a>
+				href="<?=$this->url(array('action' => 'delete-blog' , 'id' => $blog->id, 'page' => null))?>"><?=__('Delete')?></a>
 			</td>
 		</tr>
 <?php
