--- a/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
+++ b/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
@@ -54,7 +54,7 @@ echo $this->image_adapter_version?></td>
 		<th><?php
 echo __('Apache rewrite module')?></th>
 		<td><?php
-echo ($this->apache_rewrite) ? __('available') : __('unvailable')?></td>
+echo ($this->apache_rewrite) ? __('available') : __('unavailable')?></td>
 	</tr>
 	<tr>
 		<th><?php
@@ -72,24 +72,24 @@ echo ($this->safe_mode) ? __('on') : __('off')?></td>
 		<th><?php
 echo __('Memory limit')?></th>
 		<td><?php
-echo ($this->memory_limit) ? $this->memory_limit : __('unvailable')?></td>
+echo ($this->memory_limit) ? $this->memory_limit : __('unavailable')?></td>
 	</tr>
 	<tr>
 		<th><?php
 echo __('Disable functions')?></th>
 		<td><?php
-echo ($this->disable_functions) ? $this->disable_functions : __('unvailable')?></td>
+echo ($this->disable_functions) ? $this->disable_functions : __('unavailable')?></td>
 	</tr>
 	<tr>
 		<th><?php
 echo __('Zlib extention')?></th>
 		<td><?php
-echo ($this->zlib_ext) ? __('available') : __('unvailable')?></td>
+echo ($this->zlib_ext) ? __('available') : __('unavailable')?></td>
 	</tr>
 	<tr>
 		<th><?php
 echo __('Iconv')?></th>
 		<td><?php
-echo ($this->iconv_func) ? __('available') : __('unvailable')?></td>
+echo ($this->iconv_func) ? __('available') : __('unavailable')?></td>
 	</tr>
 </table>
