--- a/application/modules/blog/views/backoffice/html/admin/index.phtml
+++ b/application/modules/blog/views/backoffice/html/admin/index.phtml
@@ -3,3 +3,5 @@ echo __('Admin blogs')?></h3>
 <p><a href="<?php
 echo $this->url(array('action' => 'new-blog'))?>"><?php
 echo __('Create new blog')?></a></p>
+
+<?php echo $this->searchBlogFrom ?>
